# ai-driver-safety

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/studio/: index.html  package-lock.json  package.json
apps/studio/src/: App.tsx  sampleData.ts  styles.css
configs/: default.yaml  fleet-demo.yaml  phone-demo.yaml  synthetic-demo.yaml  test-fixture.yaml
docs/: architecture.md  datasets.md  edge-deployment.md  plugin-guide.md  synthetic-cabin-dataset-test-cases.md
docs/demo/: README.md
docs/sample-output/: dd-database-dryad-files.json  events.json  phone-use-events.json  phone-use-summary.json  real-dataset-intelligence.json  real-dataset-intelligence.md  real-human-clip-batch-summary.json  real-human-demo-source.json  real-human-events.json  real-human-summary.json  summary.json
driver_safety/: __init__.py  __main__.py  cli.py  config.py
driver_safety/api/: __init__.py  service.py
driver_safety/core/: __init__.py  alerts.py  models.py  scoring.py  smoothing.py
driver_safety/datasets/: __init__.py  dd_database.py  intelligence.py  nitymed.py  registry.py  uah_driveset.py  yawdd.py
driver_safety/io/: __init__.py  overlay.py  sources.py
driver_safety/reporting/: __init__.py  exports.py  recorder.py
driver_safety/runtime/: __init__.py  runner.py
driver_safety/vision/: __init__.py  landmarks.py  metrics.py  object_detector.py  pipeline.py
scripts/: download_models.py  make_demo_assets.py  make_real_demo_assets.py
tests/: test_config.py  test_datasets.py  test_metrics.py  test_runner.py  test_scoring_alerts.py
