[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-driver-safety"
version = "0.2.0"
description = "Driver monitoring algorithm and demo pipeline for eye closure, yawning, drowsiness, distraction, sensor fusion, and vehicle-risk scoring."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Prasad Kumkar" }]
keywords = [
  "driver-monitoring",
  "drowsiness-detection",
  "computer-vision",
  "driver-safety",
  "autonomous-vehicles",
]
dependencies = [
  "imageio>=2.34",
  "jinja2>=3.1.4",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
vision = ["mediapipe>=0.10.30"]
onnx = ["onnxruntime>=1.18"]
datasets = ["pyedflib>=0.1.39"]
dev = ["mypy>=1.10", "pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5"]
all = [
  "mediapipe>=0.10.30",
  "onnxruntime>=1.18",
  "pyedflib>=0.1.39",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
ai-driver-safety = "driver_safety.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["driver_safety"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
strict = true
exclude = ["legacy/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
